<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.concepts.android.ridecellmaptest.ui.input.MainActivity">

    <EditText
        android:id="@+id/main_origin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/origin" />

    <EditText
        android:id="@+id/main_destination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/destination" />

    <EditText
        android:id="@+id/main_speed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/speed" />

    <Button
        android:id="@+id/main_btn"
        android:text="@string/go"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
