<resources>
    <string name="app_name">RideCellMapTest</string>
    <string name="title_activity_map">Map</string>
    <string name="origin">Origin (Latitude, Longitude)</string>
    <string name="destination">Destination (Latitude, Longitude)</string>
    <string name="speed">Speed</string>
    <string name="go">Go</string>
</resources>
